tests/errors/other/newline.s





						.name "kroz
						2"

			 

.comment "Hello, i'm Kroz
	new line"







	

  



l2:	sti	r1, %:live,%1
	and	r1, %0,r1




live: live %1
	  zjmp %:live
